Wed Mar  7 13:22:48 UTC 2012  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/QueryCondition/QueryConditionTest.cpp:

          Removed unused variable.

Tue Mar  6 23:31:35 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/DisjointSequence.cpp:
        * tests/DCPS/UnitTests/DisjointSequence.cpp:

          Fixed a bug in handling sequence number 0 combining with 1.

Tue Mar  6 20:16:10 UTC 2012  Brian Johnson  <johnsonb@ociweb.com>

        * tools/scripts/lcov.pl:

          Maintaining old list.

Tue Mar  6 20:00:43 UTC 2012  Brian Johnson  <johnsonb@ociweb.com>

        * dds/DCPS/ReceivedDataElementList.h:

          Removing dead code.

        * tools/scripts/lcov.pl:

          Added check to identify when code has no coverage at all.

Tue Mar  6 19:51:39 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/Definitions.h:

          Allow a 0-valued sequence number only with a special accessor
          function like the unknown sequence number.
          Less-than comparison for SequenceNumber no longer accounts for
          wrap-around (which won't happen with 64-bit sequence numbers).
          Cleaned up some other cruft in the SequenceNumber class.

        * dds/DCPS/transport/rtps_udp/RtpsUdpDataLink.cpp:

          Use the 0 sequence number to avoid needing special case code when
          the heartbeat low is 1.

        * tests/DCPS/UnitTests/DisjointSequence.cpp:
        * tests/DCPS/UnitTests/SequenceNumber.cpp:

          Updated unit tests for sequence number changes.

Tue Mar  6 14:34:37 UTC 2012  Brian Johnson  <johnsonb@ociweb.com>

        * dds/DCPS/Service_Participant.cpp:

          Clearing cache at shutdown.

        * tests/DCPS/FooTest3_0/PubDriver.cpp:

          Added verification that lookup would succeed before cleanup.

        * tests/DCPS/QueryCondition/QueryConditionTest.cpp:

          Expanded tests to exercise getting and setting expression and parameters.
